# madtitan-bestiary

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analytics/: README.md
docs/: EXTRACTION_PIPELINE.md  FIELD_INVENTORY.md  LOCAL_SETUP.md  SECRETS_AND_DATA.md
infra/: README.md
pipelines/: README.md  TODO.md  pyproject.toml
pipelines/src/madtitan_pipelines/: __init__.py  __main__.py  definitions.py  page_inventory.py  source_manifest.py
pipelines/src/madtitan_pipelines/assets/: extraction.py  loading.py  source_manifest.py
pipelines/src/madtitan_pipelines/resources/: settings.py
pipelines/tests/: test_page_inventory.py  test_source_manifest.py
samples/: README.md
samples/annotations/srd/: adult_red_dragon_llm_vision_annotation.json
samples/candidates/srd/: adult_red_dragon_candidate.json  dire_wolf_candidate.json  lich_candidate.json
samples/candidates/synthetic/: multi_page_candidate.json  reloader_candidate.json
samples/extracted_text/srd/: dire_wolf_local_ocr_partial.json  dire_wolf_pdf_text_layer.json  failed_ocr_page.json  non_monster_page_pdf_text_layer.json
samples/extracted_text/synthetic/: reloader_manual_transcription.json
samples/fixtures/srd/: README.md  (+3 more)
samples/source_books/: monster_manual_2024_source.json
samples/synthetic/: monster_occurrences.json  reloader_structure.json
warehouse/: README.md  dbt_project.yml  profiles.yml.example
warehouse/seeds/: facet_registry.csv
web/: next-env.d.ts  package.json
web/src/: middleware.ts
(+13 files in other folders)
