[project]
name = "madtitan-pipelines"
version = "0.1.0"
description = "Dagster extraction pipeline for MadTitan Bestiary."
requires-python = ">=3.11"
dependencies = [
  "dagster",
  "dagster-postgres",
  "pdfplumber",
  "pymupdf",
  "pydantic>=2",
  "pydantic-settings",
  "psycopg[binary]",
  "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/madtitan_pipelines"]

[tool.dagster]
module_name = "madtitan_pipelines.definitions"
